nota de remision

--- a/proyecto sistema sabanas/venta_v2/navbar.html
+++ b/proyecto sistema sabanas/venta_v2/navbar.html
@@ -19,8 +19,8 @@
         <li class="dropdown">
             <a href="#" class="dropbtn">Gestion de Notas</a>
             <div class="dropdown-content">
-                <a href="">Nota de Remisión</a>
-                <a href="">Notas de Créditos y Débitos</a>
+                <a href="../venta_v2/ui_nota_remision_venta.php">Nota de Remisión</a>
+                <a href="../venta_v2/ui_nota_credito_debito.php">Notas de Créditos y Débitos</a>
             </div>
            
         </li>
