ajuste lo que seria las ventas con la nota pero falta la parte de pdf

--- a/proyecto sistema sabanas/venta_v2/navbar.html
+++ b/proyecto sistema sabanas/venta_v2/navbar.html
@@ -14,6 +14,7 @@
             <div class="dropdown-content">
                 <a href="../venta_v2/ui_facturacion.php">Facturacion</a>              
                 <a href="../venta_v2/ui_consulta_cuotas.php">Cuentas a cobrar</a>              
+                <a href="../venta_v2/ui_consultar_ventas.php">Consultar ventas</a>              
             </div>
         </li>
         <li class="dropdown">
