--- a/proyecto sistema sabanas/menu/proveedores.html
+++ b/proyecto sistema sabanas/menu/proveedores.html
@@ -125,7 +125,7 @@
         <form id="proveedor-form" action="procesar_registro_proveedor.php" method="post">
 
             <label for="nombre">ID:</label>
-            <input type="text" id="id" name="id" required>
+            <input type="text" id="id" name="id" >
 
             <label for="nombre">Nombre del Proveedor:</label>
             <input type="text" id="nombre" name="nombre" required>
