cambios en la presentacion

--- a/proyecto sistema sabanas/tesoreria_v2/vista/navbarT.html
+++ b/proyecto sistema sabanas/tesoreria_v2/vista/navbarT.html
@@ -51,6 +51,7 @@
           <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/tesoreria_v2/vista/ui_rendicion.php">Rendicion de Fondo Fijo</a>
           <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/tesoreria_v2/vista/ui_rendicion_gestionar.php">Lista de rendiciones</a>
           <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/tesoreria_v2/vista/ui_reposicion_ff.php">Reposición de Fondo Fijo</a>
+          <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/tesoreria_v2/referencialesT/vistaT/ui_proveedor_t.php">Nuevo proveedor ff</a>
         </div>
       </li>
       
