--- a/proyecto sistema sabanas/menu/tabla_pedidos.html
+++ b/proyecto sistema sabanas/menu/tabla_pedidos.html
@@ -237,7 +237,7 @@
             background-color: #d32f2f;
         }
     </style>
-    
+
 
 </head>
 
@@ -269,9 +269,9 @@
 
         <select id="filter-status">
             <option value="">Todos los estados</option>
-            <option value="pendiente">Pendiente</option>
-            <option value="enviado">Enviado</option>
-            <option value="entregado">Entregado</option>
+            <option value="Abierto">Abierto</option>
+            <option value="Anulado">Anulado</option>
+            <option value="Entregado">Entregado</option>
         </select>
     </div>
     <table id="tablaPedidos">
@@ -283,6 +283,7 @@
                 <th>Correo</th>
                 <th>Fecha pedido</th>
                 <th>Fecha Entrega Solicitado</th>
+                <th>Estado</th>
                 <th>Acciones</th>
             </tr>
         </thead>
