primero de sept

--- a/proyecto sistema sabanas/menu/factura_listar.html
+++ b/proyecto sistema sabanas/menu/factura_listar.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <title>Facturas de Compra</title>
+    <link rel="stylesheet" href="styles.css">
   <style>
     body{font-family:Arial, sans-serif; background:#f7f7f7; margin:20px}
     .wrap{max-width:1100px; margin:auto}
@@ -17,6 +18,7 @@
   </style>
 </head>
 <body>
+        <div id="navbar-container"></div>
   <div class="wrap">
     <h1>Facturas de Compra</h1>
 
@@ -152,5 +154,6 @@
 
     window.anular = anular;
   </script>
+    <script src="navbar.js"></script>
 </body>
 </html>
