--- a/proyecto sistema sabanas/menu/factura_registrar.html
+++ b/proyecto sistema sabanas/menu/factura_registrar.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Registrar Factura de Compra</title>
+    <link rel="stylesheet" href="styles.css">
   <style>
     body{font-family:Arial, sans-serif; background:#f7f7f7; margin:20px}
     .wrap{max-width:1100px; margin:auto}
@@ -20,6 +21,7 @@
   </style>
 </head>
 <body>
+    <div id="navbar-container"></div>
   <div class="wrap">
     <h1>Registrar Factura de Compra</h1>
 
@@ -246,5 +248,6 @@
     window.onPrecio = onPrecio;
     window.onIva = onIva;
   </script>
+    <script src="navbar.js"></script>
 </body>
 </html>
