--- a/proyecto sistema sabanas/menu/oc_generar.html
+++ b/proyecto sistema sabanas/menu/oc_generar.html
@@ -28,7 +28,7 @@
   </style>
 </head>
 <body>
-  <div id="navbar-container"></div><!-- tu navbar -->
+  <div id="navbar-container"></div>
   <div class="wrap">
     <h1>Generar Orden de Compra</h1>
 
@@ -68,7 +68,7 @@
     <div id="resultado"></div>
   </div>
 
-  <script src="navbar.js"></script><!-- si usás navbar dinámico -->
+  <script src="navbar.js"></script>
   <script src="oc_generar.js"></script>
 </body>
 </html>
