--- a/proyecto sistema sabanas/menu/presupuesto.html
+++ b/proyecto sistema sabanas/menu/presupuesto.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Registrar Presupuesto</title>
+  <link rel="stylesheet" href="styles.css">
   <style>
     body{font-family:Arial, sans-serif; margin:20px; background:#f7f7f7;}
     form{max-width:900px; margin:auto; background:#fff; padding:16px; border-radius:8px; box-shadow:0 1px 4px rgba(0,0,0,.08)}
@@ -20,6 +21,7 @@
   </style>
 </head>
 <body>
+    <div id="navbar-container"></div>
 
   <form id="form-presu" onsubmit="return false;">
     <h2>Registrar Presupuesto</h2>
@@ -89,6 +91,7 @@
     </div>
   </form>
 
+  <script src="navbar.js"></script>
   <script src="presupuesto.js"></script>
 </body>
 </html>
