--- a/proyecto sistema sabanas/menu/listar_presupuestos.html
+++ b/proyecto sistema sabanas/menu/listar_presupuestos.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <title>Presupuestos por Pedido</title>
+    <link rel="stylesheet" href="styles.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -133,6 +134,8 @@
 </head>
 
 <body>
+      <div id="navbar-container"></div>
+
     <div class="wrap">
         <h1>Presupuestos por Pedido</h1>
 
@@ -375,6 +378,7 @@
         }
 
     </script>
+    <script src="navbar.js"></script>
 
 </body>
 
