--- a/proyecto sistema sabanas/menu/navbar.html
+++ b/proyecto sistema sabanas/menu/navbar.html
@@ -8,6 +8,9 @@
             <div class="dropdown-content">
                 <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/tabla_prespuestos.html">Presupuesto
                     de Proveedores</a>
+                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/presupuesto.html">Presupuesto v3</a>
+                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/listar_presupuestos.html">Listar
+                    Presupuestos v3</a>
             </div>
         </li>
         <li class="dropdown">
@@ -20,7 +23,11 @@
                     de Compra V2</a>
                 <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/tabla_compras.html">Registrar
                     ComprasV2</a>
-            </div>
+                    <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/oc_generar.html">oc v3</a>
+                    <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/oc_listado.html">Listar OCs v3</a>
+                    <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/factura_registrar.html">factura v3</a>
+                    <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/factura_listar.html">Listar Facturas v3</a>
+                </div>
         </li>
         <li class="dropdown">
             <a href="#" class="dropbtn">Gestion de Inventario</a>
