ajuste de movimentos en compra

--- a/proyecto sistema sabanas/menu/navbar.html
+++ b/proyecto sistema sabanas/menu/navbar.html
@@ -1,33 +1,35 @@
 <nav class="navbar">
     <ul>
         <li><a style="color: aqua;"
-                href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/mantenimiento_seguridad/dashboard/dashboard.php">Dash
+                href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/mantenimiento_seguridad/dashboard/dashboardv1.php">Dash
                 Board</a></li>
-        <li class="dropdown">
-            <a href="#" class="dropbtn">Gestion de Presupuestos</a>
-            <div class="dropdown-content">
-                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/tabla_prespuestos.html">Presupuesto
-                    de Proveedores</a>
-                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/presupuesto.html">Presupuesto v3</a>
-                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/listar_presupuestos.html">Listar
-                    Presupuestos v3</a>
-            </div>
-        </li>
+        
         <li class="dropdown">
             <a href="#" class="dropbtn">Gestion de Compras</a>
             <div class="dropdown-content">
                 <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/tabla_pedidos.html">Pedidos
                     Internos</a>
-                <a
+                <!-- <a
                     href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/tabla_ordenes_de_compras.html">Orden
                     de Compra V2</a>
                 <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/tabla_compras.html">Registrar
-                    ComprasV2</a>
+                    ComprasV2</a> -->
                     <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/oc_generar.html">oc v3</a>
                     <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/oc_listado.html">Listar OCs v3</a>
                     <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/factura_registrar.html">factura v3</a>
                     <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/factura_listar.html">Listar Facturas v3</a>
                 </div>
+        </li>
+
+        <li class="dropdown">
+            <a href="#" class="dropbtn">Gestion de Presupuestos</a>
+            <div class="dropdown-content">
+                <!-- <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/tabla_prespuestos.html">Presupuesto
+                    de Proveedores</a> -->
+                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/presupuesto.html">Presupuesto v3</a>
+                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/listar_presupuestos.html">Listar
+                    Presupuestos v3</a>
+            </div>
         </li>
         <li class="dropdown">
             <a href="#" class="dropbtn">Gestion de Inventario</a>
@@ -46,7 +48,7 @@
             </div>
         </li>
         <li class="dropdown">
-            <a href="#" class="dropbtn">Gestion de Proveedores y Productos</a>
+            <a href="#" class="dropbtn">Referenciales</a>
             <div class="dropdown-content">
                 <a
                     href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/proveedores.html">Proveedores</a>
