--- a/proyecto sistema sabanas/menu/tabla_pedidos.html
+++ b/proyecto sistema sabanas/menu/tabla_pedidos.html
@@ -284,6 +284,7 @@
                 <th>Fecha pedido</th>
                 <th>Fecha Entrega Solicitado</th>
                 <th>Estado</th>
+                <th>Seguimiento</th>
                 <th>Acciones</th>
             </tr>
         </thead>
